--- a/API_Custom_Queries_01/src/main/resources/application.properties
+++ b/API_Custom_Queries_01/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://localhost:3306/devdb
+spring.datasource.username=root
+spring.datasource.password=admin
+spring.jpa.hibernate.ddl-auto=update
